# NIMIT

./: .env.example  .eslintrc.json  .gitignore  App.jsx  Dockerfile  Dockerfile.multistage  Landing.jsx  Makefile  README.md  backtest.db-shm  backtest.db-wal  code (1).html  docker-compose.yml  index.css  index.html  init_db.py  main.jsx  main.py  package-lock.json  package.json  prisma.sh  pyproject.toml  requirements.txt  ruff.toml  schema.prisma  tailwind.config.js
.github/workflows/: ci.yml
backend/app/: __init__.py  config.py  errors.py  llm_client.py  logging_config.py  main.py  prompts.py
backend/app/middleware/: rate_limiter.py  security.py
backend/app/routes/: admin.py  backtest.py  history.py
backend/app/services/: db_service.py
backend/app/utils/: executor.py  validators.py
backend/tests/: conftest.py
backend/tests/integration/: test_db_service.py  test_error_handling.py  test_routes.py
backend/tests/unit/: test_executor.py  test_prompts.py  test_validators.py
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
frontend/src/components/: ErrorBoundary.jsx
frontend/src/hooks/: useAPI.js  useToast.js
hooks/: index.js  useAPI.js  useToast.jsx
styles/: theme.js
