[build-system]
requires = ["setuptools>=68.0", "pytest>=7.0", "pytest-asyncio>=0.23"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "algo-backend-tests"
version = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring mocked services",
]